<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <io.nekohasekai.sagernet.ui.toolkit.LiquidGlassCardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8.0dp" android:elevation="0.0dp" app:cardElevation="0.0dp" app:cardMaxElevation="0.0dp">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:padding="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textAppearance="?textAppearanceHeadline6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/backup_local" />
                    <CheckBox android:id="@id/backup_configurations" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:checked="true" android:text="@string/backup_groups_and_configurations" />
                    <CheckBox android:id="@id/backup_rules" android:layout_width="match_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/backup_rules" />
                    <CheckBox android:id="@id/backup_settings" android:layout_width="match_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/backup_settings" />
                    <TextView android:textAppearance="?textAppearanceBody2" android:textColor="?android:textColorSecondary" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/backup_summary" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dp" android:layout_marginTop="8.0dp" android:layout_marginRight="20.0dp" android:layout_marginBottom="8.0dp" android:layout_marginHorizontal="20.0dp" android:layout_marginVertical="8.0dp">
                    <Button android:id="@id/action_share" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/share" style="@style/Widget.SagerNet.Button.Liquid.Primary" />
                    <Button android:id="@id/action_export" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/action_export_file" style="@style/Widget.SagerNet.Button.Liquid.Primary" />
                    <Button android:id="@id/action_import_file" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/action_import_file" style="@style/Widget.SagerNet.Button.Liquid.Primary" />
                </LinearLayout>
            </LinearLayout>
        </io.nekohasekai.sagernet.ui.toolkit.LiquidGlassCardView>
        <io.nekohasekai.sagernet.ui.toolkit.LiquidGlassCardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8.0dp" android:elevation="0.0dp" app:cardElevation="0.0dp" app:cardMaxElevation="0.0dp">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:padding="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textAppearance="?textAppearanceHeadline6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/backup_webdav" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dp" android:layout_marginTop="8.0dp" android:layout_marginRight="20.0dp" android:layout_marginBottom="8.0dp" android:layout_marginHorizontal="20.0dp" android:layout_marginVertical="8.0dp">
                    <Button android:id="@id/webdav_settings" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/webdav_settings" style="@style/Widget.SagerNet.Button.Liquid.Primary" />
                    <Button android:id="@id/backup_to_webdav" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/backup_to_webdav" style="@style/Widget.SagerNet.Button.Liquid.Primary" />
                    <Button android:id="@id/restore_from_webdav" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/restore_from_webdav" style="@style/Widget.SagerNet.Button.Liquid.Primary" />
                </LinearLayout>
            </LinearLayout>
        </io.nekohasekai.sagernet.ui.toolkit.LiquidGlassCardView>
    </LinearLayout>
</ScrollView>
