<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="16.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBox android:textAppearance="?textAppearanceSubtitle2" android:id="@id/backup_configurations" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/backup_groups_and_configurations" />
    <CheckBox android:textAppearance="?textAppearanceSubtitle2" android:id="@id/backup_rules" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/backup_rules" />
    <CheckBox android:textAppearance="?textAppearanceSubtitle2" android:id="@id/backup_settings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/backup_settings" />
    <TextView android:textColor="@color/material_red_accent_200" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/backup_import_summary" />
</LinearLayout>
