<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.nekohasekai.sagernet.ui.toolkit.LiquidGlassCardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8.0dp" android:elevation="0.0dp" app:cardElevation="0.0dp" app:cardMaxElevation="0.0dp">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:padding="16.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?textAppearanceHeadline6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stun_test" />
                <TextView android:textAppearance="?textAppearanceBody2" android:textColor="?android:textColorSecondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:text="@string/stun_test_summary" />
            </LinearLayout>
            <LinearLayout android:gravity="end" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8.0dp">
                <Button android:textColor="?colorPrimary" android:id="@id/stunTest" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start" android:layout_marginEnd="8.0dp" style="@style/Widget.SagerNet.Button.Liquid.Secondary" />
            </LinearLayout>
        </LinearLayout>
    </io.nekohasekai.sagernet.ui.toolkit.LiquidGlassCardView>
</LinearLayout>
